1. ScalableRWLock is used as the storage state lock. 2. Fix of compilation errors. 3. Code reformatting.